// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Banner can render empty 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`Navbar Banner can render with props and banner is set to visible 1`] = `
<DocumentFragment>
  .emotion-2 {
  background-color: #49a4d5 !important;
  color: #eceef1 !important;
  text-align: center;
  font-weight: 600;
  padding: 5px 10px;
  position: fixed !important;
  width: 100%;
  top: 70px;
  left: 0px;
  z-index: 1010 !important;
}

.emotion-2 a {
  font-weight: 300;
  color: #eceef1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.emotion-2 a:hover {
  color: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-1 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-1 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-1 {
    width: 1170px;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        <span />
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Navbar Banner can render with props but banner is not set as visible 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`Navbar Banner can render with props, banner is set to visible, and status is displayed 1`] = `
<DocumentFragment>
  .emotion-2 {
  background-color: #49a4d5 !important;
  color: #eceef1 !important;
  text-align: center;
  font-weight: 600;
  padding: 5px 10px;
  position: fixed !important;
  width: 100%;
  top: 70px;
  left: 0px;
  z-index: 1010 !important;
}

.emotion-2 a {
  font-weight: 300;
  color: #eceef1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.emotion-2 a:hover {
  color: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-1 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-1 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-1 {
    width: 1170px;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        <span>
          Alert: Visible Status!
        </span>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Navbar Banner renders with theme colors 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-1 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-1 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-1 {
    width: 1170px;
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-2 {
  background-color: #49a4d5 !important;
  color: #7250a1 !important;
  text-align: center;
  font-weight: 600;
  padding: 5px 10px;
  position: fixed !important;
  width: 100%;
  top: 70px;
  left: 0px;
  z-index: 1010 !important;
}

.emotion-2 a {
  font-weight: 300;
  color: #7250a1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.emotion-2 a:hover {
  color: white;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        <span>
          Alert: Visible Status!
        </span>
      </div>
    </div>
  </span>
</DocumentFragment>
`;
